tests/cases/scc/error/0003-junkinclude.c.res
./tests/cases/scc/error/0003-junkinclude.c:2:37:	error:   extra text after file name.
exit code 1
